@@ -342,6 +342,7 @@ plugins/actions/insertsubtitlefromkeyframe/Makefile
 plugins/actions/italicize/Makefile
 plugins/actions/joindocument/Makefile
 plugins/actions/keyframesmanagement/Makefile
+plugins/actions/minimizeduration/Makefile
 plugins/actions/moveafterprecedingsubtitle/Makefile
 plugins/actions/movesubtitles/Makefile
 plugins/actions/plaintext/Makefile
